[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-tools"
version = "0.9.0"
description = "Reusable signal evaluation, visualization, and data toolkit for quantitative analysis"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "requests>=2.31.0",
    "xlrd>=2.0.1",
    "openpyxl>=3.1.0",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
refinitiv = ["lseg-data>=2.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quant_tools*"]
